<resources>
    <string name="app_name">Scan Smart</string>
    <string name="welcome_to_scan_smart">Welcome to Scan Smart!</string>
    <string name="a_better_way_of_living">A better way of living</string>
    <string name="scan_smart">Scan Smart</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="weight_ibs">Weight (IBS)</string>
    <string name="ex_130">Ex: 130</string>
    <string name="submit">Submit</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="age">Age</string>
    <string name="ex_25">Ex: 25</string>
    <string name="level_of_activity">Level of Activity</string>
    <string name="no_exercise">No Exercise</string>
    <string name="_1_3_days_week">1-3 Days/Week</string>
    <string name="_3_5_days_week">3-5 Days/Week</string>
    <string name="_6_7_days_week">6-7 Days/Week</string>
    <string name="twice_a_day">Twice a Day</string>
    <string name="goal">Goal</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="ok">OK</string>
    <string name="calories_left">Calories Left:</string>
    <string name="scan">Scan</string>
    <string name="manually_add">Manually Add</string>
    <string name="food_name">Food Name</string>
    <string name="back">Back</string>
    <string name="add_to_list">Add To List</string>
    <string name="food_info">Food info</string>
    <string name="testtesttesttesttesttestest">testtesttesttesttesttestest</string>
    <string name="_0000">0000</string>
    <string name="calories">Calories</string>
    <string name="details">Details</string>
</resources>