<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLevel"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_of_activity"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/no_exercise"
        android:layout_marginTop="100dp"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/lightButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/_1_3_days_week"
        android:layout_marginTop="20dp"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/moderateButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/_3_5_days_week"
        android:layout_marginTop="20dp"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/heavyButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/_6_7_days_week"
        android:layout_marginTop="20dp"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/veryHeavyButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/twice_a_day"
        android:layout_marginTop="20dp"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"
        android:textStyle="bold"/>

</LinearLayout>