<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/testing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/calories_left"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/detailsButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/details"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp">

        <TextView
            android:id="@+id/foodNameView"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/calView"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="20sp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textAlignment="center"
            tools:ignore="RtlCompat,RtlHardcoded" />

    </LinearLayout>

    <EditText
        android:id="@+id/addName"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginStart="5dp"
        android:hint="@string/food_name" />

    <EditText
        android:id="@+id/addCal"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        android:layout_marginStart="5dp"
        android:hint="@string/calories" />

    <Button
        android:id="@+id/submitAdd"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:layout_marginStart="180dp"
        android:backgroundTint="#36ae47"
        android:layout_marginTop="625dp"
        android:textColor="#b1e135"/>

    <Button
        android:id="@+id/scanButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/scan"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"/>

    <Button
        android:id="@+id/manualButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="185dp"
        android:backgroundTint="#36ae47"
        android:text="@string/manually_add"
        android:textColor="#b1e135" />
</RelativeLayout>