<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Age"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/ageEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/ex_25"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/submitAge"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"
        android:layout_marginTop="50dp"
        android:text="@string/submit"/>
  </LinearLayout>