<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scan"
    android:orientation="vertical">

    <TextView
        android:id="@+id/foodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/food_name"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/foodText"
        android:text="@string/food_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="150dp"
        android:layout_marginStart="50dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addToList"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/add_to_list"
        android:layout_marginTop="330dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#36ae47"
        android:textColor="#b1e135"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="330dp"
        android:backgroundTint="#36ae47"
        android:text="@string/back"
        android:textColor="#b1e135" />

</RelativeLayout>